Hero section, numbers, whyus section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,57 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <nav>
+                <div>
+                    <img src="assests/logo.svg" alt="logo">
+                    <h1>TAKE CARE</h1>
+                </div>
+                <ul>
+                    <li><a href="">Login</a></li>
+                    <li><a href="">Signup</a></li>
+                </ul>
+            </nav>
+            <section>
+                <aside id="left">
+                    <div>
+                        <h1>Take your child everywhere, <span>Safe</span></h1>
+                        <p>History will judge us by the difference we make in the everyday lives of children.</p>
+                        <button>Get Started</button>
+                    </div>
+                </aside>
+                <aside id="right">
+                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_5eofrmfd.json"  background="transparent"  speed="1" class="hero-image" loop autoplay></lottie-player>
+                </aside>
+            </section>
+        </header>
+        <section class="numbers">
+            <div>
+                <h3>100k+</h3>
+                <p>Users Active</p>
+            </div>
+            <div>
+                <h3>20+</h3>
+                <p>Trusted customers</p>
+            </div>
+            <div>
+                <h3>2+</h3>
+                <p>Years Experience</p>
+            </div>
+            <div>
+                <h3>1000+</h3>
+                <p>Lives Saved</p>
+            </div>
+        </section>
+        <section class="whyUs">
+            <div class="whyus-con">
+                <h1>Why <span>Choose Us?</span></h1>
+                <p>We provide the real time location of your child. It also tells you the type of location in which your children is present (Red, Orange, Green). Your child can make emergency calls, send messages to police on a single click. We also provide the history of your child’s location for better parenting.</p>
+            </div>
+        </section>
+    </main>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
