--- a/profile/location.html
+++ b/profile/location.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="../assests/logo.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link
     rel="stylesheet"
@@ -22,11 +23,12 @@
                 <span>TAKE CARE</span>
             </h1>
             <a href="profile.html"><button style="background-color: transparent;color:#8A8A8A;"><img src="assets/cropdark.svg" width="24" height="24" alt="">New</button></a>
-            <a href="Location.html"><button ><img src="assets/moneylight.svg"  width="24" height="24" alt="">Location</button></a>
+            <a href="location.html"><button><img src="assets/moneylight.svg"  width="24" height="24" alt="">Location</button></a>
+            <a href="history.html"><button style="background-color: transparent;color:#8A8A8A;"><img src="assets/history.svg"  width="24" height="24" alt="">History</button></a>
         </section>
         <section id="right">
             <section id="top">
-                <input type="search" placeholder="Search by name , contact or tag">
+                <input type="search" placeholder="Search by name, contact or tag">
                 <div>
                     <img src="assets/noti.svg" alt="">
                     <img src="assets/avatar.svg" alt="">
