--- a/profile/profile.html
+++ b/profile/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="../assests/logo.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link
     rel="stylesheet"
@@ -23,6 +24,7 @@
             </h1>
             <a href="profile.html"><button ><img src="assets/home.svg" width="24" height="24" alt="">New</button></a>
             <a href="location.html"><button style="background-color: transparent;color:#8A8A8A;"><img src="assets/money.svg"  width="24" height="24" alt="">Location</button></a>
+            <a href="history.html"><button style="background-color: transparent;color:#8A8A8A;"><img src="assets/history.svg"  width="24" height="24" alt="">History</button></a>
         </section>
         <section id="right">
             <section id="top">
