--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   />
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="shortcut icon" href="assests/logo.svg" type="image/x-icon">
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <title>Take Care | Home</title>
 </head>
 <body>
@@ -104,24 +107,26 @@
         <form id="form" class="animate__animated">
             <h3>Get started with<br>Take Care.</h3>
             <p id="email" >Username</p>
-            <input type="text" onchange="signup_check()" required="required" id="sign_email" placeholder="Darpan">
+            <input type="text" required="required" id="sign_email" placeholder="Darpan">
             <p id="password" >Password</p>
             <input type="password" id="sign_password" required="required" placeholder="Darpan@1977.">
-            <input type="submit" onclick="signup2()" id="register" value="Register" style="border: none; background: #1A2E35; color: white; ">
+            <p id="error"></p>
+            <input type="submit" id="signup-button" onclick="signup2()" id="register" value="Register" style="border: none; background: #1A2E35; color: white; ">
         </form>
     </section>
     <section class="login" id="login" >
-        <form id="form2" class="animate__animated" onsubmit="login2()">
+        <form id="form2" class="animate__animated">
             <h3>Login with<br>Take Care.</h3>
             <p id="email">Username</p>
             <input type="text" required="required" id="login_email" placeholder="Darpan">
             <p id="password">Password</p>
             <input type="password" required="required" id="login_password" placeholder="Darpan@1977.">
-            <input type="submit"  value="login" style="border: none; background: #1A2E35; color: white; ">
+            <p id="error"></p>
+            <input type="submit" id="login-button"  value="login" style="border: none; background: #1A2E35; color: white; ">
         </form>
     </section>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
